<resources>
    <string name="app_name">newProject</string>
    <string name="go_to_the_next">go to the next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_second_screen">перейти на 2-й экран</string>
    <string name="write_text">Введите текст</string>
    <string name="go_to_third_screen">перейти на 3-й экран</string>
    <string name="first_screen">Экран 1</string>
    <string name="second_screen">Экран 2</string>
    <string name="third_screen">Экран 3</string>
    <string name="open_bottom_sheet">Открыть Bottom Sheet</string>
    <string name="send">Отправить</string>
    <string name="write_quantity">Введите количество</string>
    <string name="add_to_random_positions">Добавить на случайные позиции</string>
    <string name="delete_random_positions">Удалить на случайные позиции</string>
    <string name="add_one_element">Добавить один элемент на случайную позицию</string>
    <string name="delete_one_element">Удалить случайный элемент</string>
    <string name="list">Список</string>
    <string name="web">Сетка</string>
    <string name="image">Image</string>
    <string name="header">Заголовок</string>
    <string name="description">Описание</string>
    <string name="back_button">Назад</string>
    <string name="next_button">Далее</string>
    <string name="empty_title_error">Заголовок не может быть пустым</string>
    <string name="empty_text_error">Текст не может быть пустым</string>
    <string name="launched_from_notification_message">Приложение было запущено из уведомления</string>
    <string name="image_selection_error">Не удалось загрузить изображение</string>
    <string name="notification_header">Заголовок уведомления</string>
    <string name="notification_text">Текст уведомления</string>
    <string name="show_notifications">Показать уведомление</string>
    <string name="to_app_theme">Сбросить цвет</string>
    <string name="not_empty_image">фото уже загружено</string>

</resources>