<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hw4.NotificationsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:clipToOutline="true"
                android:background="@drawable/circle_background"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/delete_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/remove"
                android:layout_gravity="end|top"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                app:tint="?attr/colorAccent" />

        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/theme_selector_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:background="@drawable/selection_background"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/theme_selector_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/baseline_keyboard_double_arrow_down_24"
            android:background="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/theme_red_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/square_red"
            app:layout_constraintTop_toBottomOf="@id/theme_selector_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/theme_green_button"
            android:visibility="gone"/>

    <Button
        android:id="@+id/theme_green_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/square_green"
        app:layout_constraintTop_toBottomOf="@id/theme_selector_button"
        app:layout_constraintStart_toEndOf="@+id/theme_red_button"
        app:layout_constraintEnd_toStartOf="@+id/theme_yellow_button"
        android:visibility="gone"/>

    <Button
        android:id="@+id/theme_yellow_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/square_yellow"
        app:layout_constraintTop_toBottomOf="@id/theme_selector_button"
        app:layout_constraintStart_toEndOf="@+id/theme_green_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>



<EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_text"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/theme_selector_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_header"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_text"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_text"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/priority_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_message"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/show_notification_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_notifications"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/priority_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/app_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_app_theme"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/show_notification_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
